# renuxos

./: .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.lua  build.py  build.rs  build_x86_64.md  rustfmt.toml  x86_64.json
.cargo/: config.toml
.github/workflows/: build_image.yml  format_code.yml  main.yml  submodule.yaml  update_modules.yml
bootloader/: Cargo.toml  build.zig
bootloader/src/: build.rs  main.rs  main.zig
build_iso/boot/grub/: grub.cfg
build_iso/boot/header/: multiboot_header.c
c_src/drivers/gpu/vga/: vga.c
c_src/drivers/include/: vga.h
config/arch/: aarch64-renux.json  x86_64-renux.json
docs/: docs.md
docs/build-guide/: build_x86_64.md
docs/code/: vga.md
docs/code_docs/: vga.md
docs/menuconfig/: custom_kernel.md
docs/plans/: future_plans.md
docs/readme_in_other_languages/: README_BR.md  README_ES.md
docs/translations/: README_BR.md  README_ES.md
drivers/c/gpu/include/: vga.h
drivers/c/gpu/vga/: vga.c
iso/boot/header/: multiboot.s  multiboot_header.ll
kernel/: Cargo.toml  linker.ld
kernel/impl/x86_64/boot/: header.asm  main.asm
kernel/src/: build.rs  lib.rs  main.rs  multiboot.rs
kernel/src/init_system/: init.rs
kernel/targets/x86_64/: linker.ld
kernel/targets/x86_64/iso/boot/grub/: grub.cfg
main/: Cargo.toml
main/src/: main.rs
menuconfig/: Cargo.toml
menuconfig/src/: main.rs
renux_kernel/: Cargo.toml
renux_kernel/src/: build.rs  main.rs
renux_kernel/src/wrappers/: vga.rs
scripts/: build.py  update_source.py
src/: build.rs
