[package]
name = "renuxos"
version = "0.1.0"
edition = "2024"
build = "kernel/src/build.rs"

[dependencies]
bootloader = "0.9"

[dev-dependencies]
bootimage = "0.10.0"

[build-dependencies]
bootimage = "0.10.0"
cc = "1.0"
[build]
target-dir = "target"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "renuxos"
path = "kernel/src/main.rs"


