[package]
# Basic package information
name = "kernel"       # The name of the kernel package/project
version = "0.1.0"           # The current version of the project
edition = "2024"            # The Rust edition being used (2024 edition)
build = "src/build.rs"      # Specifies a custom build script located at "src/build.rs"

[dev-dependencies]
# Development-only dependencies
bootimage = "0.10.0"        # Used for creating bootable disk images during development
bootloader = "0.9"          # Provides the bootloader crate, used to bootstrap the kernel

[build-dependencies]
# Build script dependencies
bootimage = "0.10.0"        # Required to generate bootable disk images during the build process
cc = "1.0"                  # Enables building and linking C code during the build process

