[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel = { path = "../kernel" }
[dev-dependencies]
bootimage = "0.10.0"        
bootloader = "0.9"
[build-dependencies]
# Build script dependencies
bootimage = "0.10.0"        # Required to generate bootable disk images during the build process
cc = "1.0"                  # Enables building and linking C code during the build process
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"